# nonebot-plugin-bwiki-navigator

./: README.md  pyproject.toml
bwiki_navigator/: __init__.py  config.py  parser.py
nonebot_plugin_bwiki_navigator/: __init__.py  handler.py
